Add orders features
Can see customer orders, can place order

Add fr-Ca traduction and some other tuning
