# src/app/shared/models/cart-item.model.ts
@@ -1,0 +1,8 @@
+export interface CartItemModel {
+  image: string;
+  name: string;
+  price: number;
+  productId: number;
+  cartId: number;
+  qty: number;
+}
