# src/app/shared/models/enums/transaction.enum.ts
@@ -1,0 +1,5 @@
+export enum TransactionEnum {
+  OPENED = 'OPENED',
+  PENDING = 'PENDING',
+  CLOSED = 'CLOSED'
+}
