# src/app/shared/models/order-item.model.ts
@@ -1,0 +1,12 @@
+import {ProductOrderItemModel} from './catalogue-item.model';
+
+export interface OrderItemModel {
+  id?: number;
+  createdAt?: string;
+  updatedAt?: string;
+  quantity?: number;
+  totalPrice?: number;
+  productDto?: ProductOrderItemModel;
+  orderId?: number;
+  customerId?: number;
+}
