# src/app/shared/models/order.model.ts
@@ -1,0 +1,9 @@
+import {TransactionEnum} from './enums/transaction.enum';
+
+export interface OrderModel {
+  id?: number;
+  updatedAt?: Date;
+  quantity?: number;
+  totalPrice?: number;
+  status?: TransactionEnum
+}
